fix layout bugs

--- a/week-3-task/style.css
+++ b/week-3-task/style.css
@@ -371,4 +371,7 @@ input[type="date"]{
     #downbtn{
         margin-top: 15px;
     }
+    #mobile-nav{
+        margin-top: -24vh;
+    }
 }
